--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>小米账号-登录</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/login.css">
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 
@@ -37,7 +37,8 @@
                 <!-- 账号登录模块 -->
                 <div class="banner-box-con">
                     <label for="username"></label>
-                    <input class="txt" autocomplete="off" type="text" name="username" id="username" placeholder="邮箱/手机号码/小米ID">
+                    <input class="txt" autocomplete="off" type="text" name="username" id="username"
+                        placeholder="邮箱/手机号码">
 
                     <label for="pwd"> </label>
                     <input class="txt1" type="password" placeholder="密码" autocomplete="off" id="pwd" name="password">
@@ -45,7 +46,7 @@
                     <div class="login-btn-box">
                         <ul>
                             <li><a href="register.html">立即注册 </a> </li>
-                            <li class="spacers"><a href="#">|        </a> </li>
+                            <li class="spacers"><a href="#">| </a> </li>
                             <li><a href="#">忘记密码？ </a> </li>
                         </ul>
                     </div>
@@ -89,45 +90,13 @@
 
 
             </ul>
-            <br/>
-            <p class="one">小米公司版权所有-京ICP备10046444I<img src="upload/ia_200000000.png">京公网安备11010802020134号-京ICP证110507号</p>
+            <br />
+            <p class="one">小米公司版权所有-京ICP备10046444I<img src="upload/ia_200000000.png">京公网安备11010802020134号-京ICP证110507号
+            </p>
         </div>
 
     </div>
-    <script src="js/jquery.min.js"></script>
-    <script>
-        $('#btn1').on('click', function() {
-            var username = $('#username').val();
-            var password = $('#pwd').val();
-            if (username.trim().length == 0) {
-                alert('请输入用户名')
-
-            }
-            if (password.trim().length == 0) {
-                alert('请输入密码');
-                return;
-            }
-            $.ajax({
-                type: 'POST',
-                url: '../php/login.php',
-                data: {
-                    username: username,
-                    password: password
-                },
-                success: function(result) {
-                    console.log(result)
-                    if (result.code) {
-                        location.href = 'index1.html'
-                    } else {
-                        console.log(2)
-                    }
-
-                },
-                dataType: 'json'
-
-            })
-        });
-    </script>
+    <script src="js/login.js"></script>
 
 </body>
 
