--- a/XiaomiMall/register.html
+++ b/XiaomiMall/register.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小米账号-注册</title>
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/register.min.css">
-    <link rel="shortcut icon" href="//s01.mifile.cn/favicon.ico" type="image/x-icon" />
-
+    <link rel="stylesheet" href="css/register.css">
+    <!-- <link rel="shortcut icon" href="//s01.mifile.cn/favicon.ico" type="image/x-icon" /> -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 
@@ -36,20 +36,24 @@
                 </div>
                 <!-- 账号登录模块 -->
                 <div class="banner-box-con">
-                    <form action="./php/register.php" method="GET">
-                        <label for="username"> <input class="txt1" autocomplete="off" type="text" name="user" id="username" placeholder="邮箱/手机号码/小米ID"></label>
 
+                    <label for="username"> <input class="txt1" autocomplete="off" type="text" name="user" id="username"
+                            placeholder="邮箱/手机号码"></label>
+                    <p class="tips"></p>
 
-                        <label for="pwd">      <input class="txt1" type="password" placeholder="密码" autocomplete="off" id="pwd" name="password"></label>
+                    <label for="pwd"> <input class="txt1" type="password" placeholder="密码" autocomplete="off" id="pwd"
+                            name="password"></label>
+                    <p class="tips">*请设置长度为6-16位包含数字+字母,可以包含特殊符号的密码*</p>
 
-                        <label for="pwds"> <input class="txt1" type="password" placeholder="确认密码" autocomplete="off" id="pwds" > </label>
-                        <input type="submit" value="注册账号" class="txt2">
+                    <label for="pwds"> <input class="txt1" type="password" placeholder="确认密码" autocomplete="off"
+                            id="pwds"> </label>
+                    <p class="tips">*查看两次密码是否一致*</p>
+                    <input type="button" value="注册账号" class="txt2">
 
-                    </form>
                     <div class="login-btn-box">
                         <ul>
                             <li><a href="login.html">立即登录</a> </li>
-                            <li><a href="#">|        </a> </li>
+                            <li><a href="#">| </a> </li>
                             <li><a href="#">忘记密码？ </a> </li>
                         </ul>
                     </div>
@@ -93,11 +97,13 @@
 
 
             </ul>
-            <br/>
-            <p class="one">小米公司版权所有-京ICP备10046444I<img src="upload/ia_200000000.png">京公网安备11010802020134号-京ICP证110507号</p>
+            <br />
+            <p class="one">小米公司版权所有-京ICP备10046444I<img src="upload/ia_200000000.png">京公网安备11010802020134号-京ICP证110507号
+            </p>
         </div>
 
     </div>
+    <script src="./js/register.js"></script>
 </body>
 
 </html>
